# FURRY

./: CMakeLists.txt  LICENSE  Makefile  README.md  fix_paths.py  list_times.py  timestamps.txt
build_backup/: ALL_BUILD.vcxproj  FURRY.slnx  RUN_TESTS.vcxproj  furry.vcxproj  furry_app.vcxproj  furry_game.vcxproj  furry_lib.vcxproj  lua.vcxproj  test_furry.vcxproj
docs/: LUA_UI_AUTHORING_GUIDE.md  PROJECT_AUDIT.md
furry/shaders/: base.frag  base.vert  transition_dissolve.frag  transition_wipe.frag
furry/shaders/spirv/: base.vert.spv
furry/src/: furry.h
furry/src/asset/: fr_asset.c  fr_asset.h
furry/src/core/: fr_log.c  fr_log.h  fr_math.h  fr_memory.c  fr_memory.h  fr_time.c  fr_time.h
furry/src/platform/: fr_input.c  fr_input.h  fr_platform.c  fr_platform.h
furry/src/render/: fr_renderer.c  fr_renderer.h  fr_shader.h
furry/src/scene/: fr_scene.c  fr_scene.h
furry/src/script/: fr_script.c  fr_script.h
furry/tools/: compile_shaders.bat
include/: furry.h  furry_ui.h
my_vn_game/: main.c
scripts/: build_windows.bat  build_windows.ps1
src/: furry.c  furry_audio_miniaudio.c  furry_ui.c  main.c
tests/: test_furry.c
